--- a/WebBanSach/WebBanDoDienTu.csproj
+++ b/WebBanSach/WebBanDoDienTu.csproj
@@ -53,10 +53,16 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Json, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c6752e45808247c2, processorArchitecture=MSIL">
+      <HintPath>..\packages\JSON.1.0.1\lib\net40\Json.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
       <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
       <Private>True</Private>
@@ -119,9 +125,6 @@
     <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
@@ -196,15 +199,6 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\EF\SanPham.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\EF\sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\EF\sp_helpdiagrams_Result.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\EF\sysdiagram.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\EF\TheLoai.cs">
@@ -1310,25 +1304,30 @@
     <Content Include="Assets\images\Canon LP250H.jpg" />
     <Content Include="Assets\images\Captix C1.jpg" />
     <Content Include="Assets\images\Captix C2.jpg" />
+    <Content Include="Assets\images\delivery.png" />
     <Content Include="Assets\images\Ecap E1.jpg" />
     <Content Include="Assets\images\Ecap E2.jpg" />
+    <Content Include="Assets\images\facebook.png" />
     <Content Include="Assets\images\FPT FT1.jpg" />
     <Content Include="Assets\images\FPT FT2.jpg" />
     <Content Include="Assets\images\Fulhen J700.jpg" />
     <Content Include="Assets\images\Fulhen J900.jpg" />
     <Content Include="Assets\images\Fulhen MX1.jpg" />
     <Content Include="Assets\images\Fulhen MX2.jpg" />
+    <Content Include="Assets\images\gpluse.png" />
     <Content Include="Assets\images\Iphone XS Max 128Gb.jpg" />
     <Content Include="Assets\images\Iphone XS Max 256Gb.jpg" />
     <Content Include="Assets\images\Iphone XS Max 64Gb.jpg" />
     <Content Include="Assets\images\Jbail Bose B1.jpg" />
     <Content Include="Assets\images\Jbail Bose B2.jpg" />
+    <Content Include="Assets\images\logo.png" />
     <Content Include="Assets\images\Newmen 10i.jpg" />
     <Content Include="Assets\images\Newmen XT1.jpg" />
     <Content Include="Assets\images\Nokia 1110i.jpg" />
     <Content Include="Assets\images\Nokia 8800.jpg" />
     <Content Include="Assets\images\Nokia E63.jpg" />
     <Content Include="Assets\images\Nokia E72.jpg" />
+    <Content Include="Assets\images\rss.png" />
     <Content Include="Assets\images\Samsung 2k Edge.jpg" />
     <Content Include="Assets\images\Samsung 4K HD Infinity.jpg" />
     <Content Include="Assets\images\Samsung Galaxy Note 9.jpg" />
@@ -1343,6 +1342,7 @@
     <Content Include="Assets\images\Sony Bass XSB.jpg" />
     <Content Include="Assets\images\Sony RX100 Mark 5.jpg" />
     <Content Include="Assets\images\Sony RX100 Mark 6.jpg" />
+    <Content Include="Assets\images\twitter.png" />
     <Content Include="Assets\images\Viettel VT10.jpg" />
     <Content Include="Assets\images\Viettel VT60.jpg" />
     <Content Include="Assets\images\Vin Smart Joy1.jpg" />
