--- a/WebBanSach/packages.config
+++ b/WebBanSach/packages.config
@@ -6,6 +6,7 @@
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net45" />
+  <package id="JSON" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net45" />
@@ -15,7 +16,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="popper.js" version="1.14.3" targetFramework="net45" />
