Pass Hash and fix CartItem, fix AdminSite.

--- a/WebBanDoDienTu/Web.config
+++ b/WebBanDoDienTu/Web.config
@@ -77,4 +77,4 @@
     </compilers>
   </system.codedom>
  
-<connectionStrings><add name="ThucTap_NhomEntities" connectionString="data source=DESKTOP-DIAMOND\SQLEXPRESS;initial catalog=ThucTap_Nhom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings><add name="ThucTap_NhomEntities" connectionString="data source=DESKTOP-BIP6MJ4\HUNGSQL;initial catalog=ThucTap_Nhom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
